--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,9 +13,8 @@ on:
 env:
   PYTHON310: '3.10.2'
   PYTHON39: '3.9.10'
-  PYTHON38: 3.8.12
-  PYTHON37: 3.7.12
-  PYTHON36: 3.6.15
+  PYTHON38: '3.8.12'
+  PYTHON37: '3.7.12'
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -56,15 +55,6 @@ jobs:
       with:
         version: ${{ env.PYTHON37 }}
         tags: 3.7
-  python36:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON36 }}
-        tags: 3.6
   ### dev
   python310-dev:
     runs-on: ubuntu-latest
@@ -106,16 +96,6 @@ jobs:
         version: ${{ env.PYTHON37 }}
         dev: 1
         tags: 3.7-dev
-  python36-dev:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON36 }}
-        dev: 1
-        tags: 3.6-dev
   ### dev-macos
   python310-dev-macos:
     runs-on: ubuntu-latest
@@ -180,20 +160,4 @@ jobs:
         user_id: 501
         group_id: 20
         tags: 3.7-dev-macos
-        platform: linux/amd64,linux/arm64
-  python36-dev-macos:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
-      with:
-        platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON36 }}
-        dev: 1
-        user_id: 501
-        group_id: 20
-        tags: 3.6-dev-macos
         platform: linux/amd64,linux/arm64
