--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,29 +11,38 @@ on:
   pull_request:
 
 env:
+  PYTHON313: '3.13.0'
   PYTHON312: '3.12.7'
   PYTHON311: '3.11.10'
   PYTHON310: '3.10.15'
   PYTHON39: '3.9.20'
-  PYTHON38: '3.8.20'
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
+  python313:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
+    - uses: ./.github/actions
+      with:
+        version: ${{ env.PYTHON313 }}
+        tags: 3.13,3,latest
   python312:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON312 }}
-        tags: 3.12,3,latest
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: ./.github/actions
+        with:
+          version: ${{ env.PYTHON312 }}
+          tags: '3.12'        
   python311:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON311 }}
@@ -41,8 +50,8 @@ jobs:
   python310:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON310 }}
@@ -50,37 +59,38 @@ jobs:
   python39:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON39 }}
         tags: 3.9
-  python38:
+  ### dev
+  python313-dev:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
-        version: ${{ env.PYTHON38 }}
-        tags: 3.8
-  ### dev
+        version: ${{ env.PYTHON313 }}
+        dev: 1
+        tags: 3.13-dev,3-dev,dev
   python312-dev:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON312 }}
-        dev: 1
-        tags: 3.12-dev,3-dev,dev
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: ./.github/actions
+        with:
+          version: ${{ env.PYTHON312 }}
+          dev: 1
+          tags: 3.12-dev        
   python311-dev:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON311 }}
@@ -89,8 +99,8 @@ jobs:
   python310-dev:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON310 }}
@@ -99,48 +109,54 @@ jobs:
   python39-dev:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON39 }}
         dev: 1
         tags: 3.9-dev
-  python38-dev:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON38 }}
-        dev: 1
-        tags: 3.8-dev
   ### dev-macos
-  python312-dev-macos:
+  python313-dev-macos:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-qemu-action@v3
       with:
         platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
-        version: ${{ env.PYTHON312 }}
+        version: ${{ env.PYTHON313 }}
         dev: 1
         user_id: 501
         group_id: 20
-        tags: 3.12-dev-macos,3-dev-macos,dev-macos
+        tags: 3.13-dev-macos,3-dev-macos,dev-macos
         platform: linux/amd64,linux/arm64
+  python312-dev-macos:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+        with:
+          platforms: amd64,arm64
+      - uses: docker/setup-buildx-action@v3
+      - uses: ./.github/actions
+        with:
+          version: ${{ env.PYTHON312 }}
+          dev: 1
+          user_id: 501
+          group_id: 20
+          tags: 3.12-dev-macos
+          platform: linux/amd64,linux/arm64        
   python311-dev-macos:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-qemu-action@v3
       with:
         platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON311 }}
@@ -152,11 +168,11 @@ jobs:
   python310-dev-macos:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-qemu-action@v3
       with:
         platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON310 }}
@@ -168,11 +184,11 @@ jobs:
   python39-dev-macos:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-qemu-action@v3
       with:
         platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
+    - uses: docker/setup-buildx-action@v3
     - uses: ./.github/actions
       with:
         version: ${{ env.PYTHON39 }}
@@ -180,20 +196,4 @@ jobs:
         user_id: 501
         group_id: 20
         tags: 3.9-dev-macos
-        platform: linux/amd64,linux/arm64
-  python38-dev-macos:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
-      with:
-        platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.PYTHON38 }}
-        dev: 1
-        user_id: 501
-        group_id: 20
-        tags: 3.8-dev-macos
         platform: linux/amd64,linux/arm64
