--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -1,40 +1,30 @@
-name: Build
-description: Build python image
+name: push
+description: combine multi-arch image and push
 inputs:
   version:
     description: version
     required: true
-  dev:
-    description: dev version of image
+  latest:
+    description: if tag latest
     required: false
+  latest_major:
+    description: if tag latest major version
+    required: false
+  dev:
+    description: if set then it's a dev version
   user_id:
     description: user id
-    required: false
-  group_id:
-    description: group id
-    required: false
-  tags:
-    description: image tags
     required: true
-  platform:
-    description: os/arch
-    required: false
-    default: linux/amd64
 runs:
   using: "composite"
   steps:
-  - name: Build image
-    env:
-      PYTHON_VER: ${{ inputs.version }}
-      PYTHON_DEV: ${{ inputs.dev }}
-      WODBY_USER_ID: ${{ inputs.user_id }}
-      WODBY_GROUP_ID: ${{ inputs.group_id }}
-      TAGS: ${{ inputs.tags }}
-      PLATFORM: ${{ inputs.platform }}
-    run: |
-      set -e
-      make buildx-build-amd64
-      make test
-      make buildx-build
-      . $GITHUB_ACTION_PATH/release.sh
-    shell: bash
+    - name: Build image
+      env:
+        PYTHON_VER: ${{ inputs.version }}
+        PYTHON_DEV: ${{ inputs.dev }}
+        WODBY_USER_ID: ${{ inputs.user_id }}
+        LATEST: ${{ inputs.latest }}
+        LATEST_MAJOR: ${{ inputs.latest_major }}
+      run: |
+        . $GITHUB_ACTION_PATH/release.sh
+      shell: bash
